--- a/index.html
+++ b/index.html
@@ -1,1 +1,274 @@
+<!-- By :-  ፚ Ꭷ Ꮢ Ꭷ ❥ & @ZORO2045 -->
+<!-- نسألكم الدعاء-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=0.9, maximum-scale=0.9, minimum-scale=0.9">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css">
+  <title>Eid Mubarak 🎉</title>
+  <link rel="icon" href="https://telegra.ph/file/e0bb5dd67ae9a681be2a8.jpg" type="image/png">
+</head>
+<body>
+  <div class="bg">
+    <section class="player">
+      <div class="container">
+        <div class="top-icons">
+        </div>
+        <div class="img">
+          <img src="https://telegra.ph/file/1f94fe05b0c0ffca5b229.png" alt="">
+        </div>
+        <div class="text">
+      <center> 
+<a style="color: orange ;" href="http://t.me/ZORO2045"
+target="_blank"<mark>ፚ Ꭷ Ꮢ Ꭷ ❥ | #Free_Palestine
+    </mark>
+    </center>
+       </a>
+          <h4>نهنئكم جميعاً بمناسبة حلول عيد الفطر المبارك ، وكل عام وأنتم بخير</h4>
+          <h5>نسالكم الدعاء</h5>
+      </div>
+        <div class="seek">
+          <div class="fill"></div>
+        </div>
+        <div class="btns">
+          <a href="#"><i class="fa fa-retweet"></i></a>
+          <a href="#"><i class="fa fa-backward"></i></a>
+          <a href="#" class="play-btn" onclick="togglePlayPause()"><i class="fa fa-play"></i></a>
+          <a href="#"><i class="fa fa-forward"></i></a>
+          <a href="#"><i class="fa fa-random"></i></a>
+        </div>
+      </div>
+      <audio class="song">
+        <source src="https://backup.qurango.net/radio/eid" type="audio/mp3"/>
+    </audio>
+
+     <div align="center">
+<table border="0" width="100%" style="border-collapse: collapse">
+<tr><td class="alt1" colspan="3"><b>
+<font size="5" color="lime">
+<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللَّهُمَّ أَهِلَّهُ علَيْنَا بِالأَمْنِ والإِيمَانِ ، اللهم اجعلنا فيه من عتقائك من النار ، واجعلنا من المقبولين الفائزين ، اللهم أجعل أيامنا عيداً وارزقنا عمراً مديداً واجعل لنا من كل ضيق فرج ومن كل هماً مخرجاً ، اللهم اجبر كسرنا على فراق شهرنا ، وأعده علينا أعواماً عديدة وأزمنة مديدة ، واجعله شاهداً لنا لا علينا
+ </marquee></font></b></td>
+</tr></table></div>
+
+
+    </section>
+  </div>
+  <script src="js/app.js"></script>
+
+
+
+  <style>
+
+          @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Nunito', sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    color: #fff;
+    font-weight: 200;
+}
+
+.bg {
+    background: url('https://telegra.ph/file/6584f8d30c6010fecb727.jpg') no-repeat center center/cover;
+    height: 100vh;
+    width: 100vw;
+}
+
+.player {
+    width: 400px;
+    height: 665px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    margin: 10px 0 0 0;
+    box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.5), -3px -3px 50px rgba(0, 0, 0, 0.5);
+}
+
+.container {
+    width: 90%;
+    margin:  auto;
+    overflow: hidden;
+}
+
+.top-icons {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.top-icons a {
+    color: #fff;
+    font-size: 1.3em;
+}
+
+.top-icons a:hover {
+    color: #b9b6b6;
+    transition: all 0.2s ease-in-out;
+}
+
+.img {
+    border-top: 3px solid #fff;
+    border-radius: 50%;
+}
+
+.img img {
+    margin: 50px 0 0 55px;
+    width: 70%;
+    border-radius: 50%;
+    transition: all 0.4s ease-in-out;
+    cursor: pointer;
+}
+
+.img img:hover {
+    box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.5), -3px -3px 50px rgba(0, 0, 0, 0.5);
+}
+
+.text {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.text h1 {
+    font-size: 3em;
+}
+
+.text h4 {
+    font-size: 1.4em;
+}
+
+.time {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0 0 0;
+}
+
+.time a {
+    color: #fff;
+    font-size: 1.1em;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.seek {
+    width: 100%;
+    height: 4px;
+    background: rgba(255, 255, 255, 0.3);
+    margin: 5px 0;
+    position: relative;
+}
+
+.fill {
+    width: 0%;
+    height: 4px;
+    background: rgba(255, 255, 255, 0.7);
+}
+
+.btns {
+    margin: 40px 0;
+    text-align: center;
+}
+
+.btns a {
+    color: #fff;
+    font-size: 1.8em;
+    margin: 0 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.btns a:hover {
+    color: #b9b6b6;
+}
+
+.btns a:nth-child(1),
+.btns a:nth-child(5) {
+    opacity: 0.6;
+}
+
+.btns a:nth-child(1):hover,
+.btns a:nth-child(5):hover {
+    opacity: 1;
+    color: #fff;
+}
+
+.btns .fa-pause,
+.btns .fa-play {
+    border: 2px solid #fff;
+    padding: 20px 22px;
+    border-radius: 50%;
+}
+
+button {
+    color: #fff;
+    font-size: 1.8em;
+    font-weight: bold;
+    font-family: 'Nunito', sans-serif;
+    text-align: center;
+    background: #00c9d0;
+    border: none;
+    width: 100%;
+    height: 70px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+    background: #02a0a5;
+}
+
+
+
+
+
+  </style>
+
+
+
+  <script>
+
+
+          const song = document.querySelector('.song');
+const fill = document.querySelector('.fill');
+
+function togglePlayPause(){
+  if(song.paused){
+    song.play();
+    let playBtn = document.querySelector('.play-btn');
+    playBtn.innerHTML = '<i class="fa fa-pause"></i>';
+  } else{
+    song.pause();
+    playBtn = document.querySelector('.play-btn');
+    playBtn.innerHTML = '<i class="fa fa-play"></i>';
+  }
+}
+
+song.addEventListener('timeupdate', function(){
+  let position = song.currentTime / song.duration;
+  fill.style.width = position * 100 + '%';
+})
+
+
+  </script>
+</body>
+</html>
+<!-- By :-  ፚ Ꭷ Ꮢ Ꭷ ❥ & @ZORO2045 -->
+<!-- نسألكم الدعاء-->
+
+
+
 
