--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ target="_blank"<mark>ፚ Ꭷ Ꮢ Ꭷ ❥ | #Free_Palestine
 <table border="0" width="100%" style="border-collapse: collapse">
 <tr><td class="alt1" colspan="3"><b>
 <font size="5" color="lime">
-<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللَّهُمَّ أَهِلَّهُ علَيْنَا بِالأَمْنِ والإِيمَانِ ، اللهم اجعلنا فيه من عتقائك من النار ، واجعلنا من المقبولين الفائزين ، اللهم أجعل أيامنا عيداً وارزقنا عمراً مديداً واجعل لنا من كل ضيق فرج ومن كل هماً مخرجاً ، اللهم اجبر كسرنا على فراق شهرنا ، وأعده علينا أعواماً عديدة وأزمنة مديدة ، واجعله شاهداً لنا لا علينا
+<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللهم اجعلنا من عتقائك من النار ، واجعلنا من المقبولين الفائزين ، اللهم أجعل أيامنا عيداً وارزقنا عمراً مديداً واجعل لنا من كل ضيق فرج ومن كل هماً مخرجاً ، اللهم اجبر كسرنا على فراق شهرنا ، وأعده علينا أعواماً عديدة وأزمنة مديدة ، واجعله شاهداً لنا لا علينا
  </marquee></font></b></td>
 </tr></table></div>
 
