--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
   <title>Eid Mubarak 🎉</title>
-  <link rel="icon" href="https://telegra.ph/file/e0bb5dd67ae9a681be2a8.jpg" type="image/png">
+  <link rel="icon" href="https://telegra.ph/file/d67cf9706a3b0fbaf739c.jpg" type="image/png">
 </head>
 <body>
   <div class="bg">
@@ -26,7 +26,7 @@ target="_blank"<mark>ፚ Ꭷ Ꮢ Ꭷ ❥ | #Free_Palestine
     </mark>
     </center>
        </a>
-          <h4>نهنئكم جميعاً بمناسبة حلول عيد الفطر المبارك ، وكل عام وأنتم بخير</h4>
+          <h4>نهنئكم جميعاً بمناسبة حلول عيد الأضحي المبارك ، وكل عام وأنتم بخير</h4>
           <h5>نسالكم الدعاء</h5>
       </div>
         <div class="seek">
@@ -48,7 +48,8 @@ target="_blank"<mark>ፚ Ꭷ Ꮢ Ꭷ ❥ | #Free_Palestine
 <table border="0" width="100%" style="border-collapse: collapse">
 <tr><td class="alt1" colspan="3"><b>
 <font size="5" color="lime">
-<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللهم اجعلنا من عتقائك من النار ، واجعلنا من المقبولين الفائزين ، اللهم أجعل أيامنا عيداً وارزقنا عمراً مديداً واجعل لنا من كل ضيق فرج ومن كل هماً مخرجاً ، اللهم اجبر كسرنا على فراق شهرنا ، وأعده علينا أعواماً عديدة وأزمنة مديدة ، واجعله شاهداً لنا لا علينا
+<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللهم إنا نسألك أن تكتب لما الرحمة الواسعة، وألا تدع ذنب لنا إلا وغفرته، ولا هم إلا فرجته.
+نسأل الله العظيم صاحب الجلال والإكرام أن يقضي عنا حوائج الدين والدنيا، وأن نكون من المقبولين وليس من المطرودين
  </marquee></font></b></td>
 </tr></table></div>
 
@@ -268,6 +269,5 @@ song.addEventListener('timeupdate', function(){
 </html>
 <!-- By :-  ፚ Ꭷ Ꮢ Ꭷ ❥ & @ZORO2045 -->
 <!-- نسألكم الدعاء-->
-
 
 
