--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ target="_blank"<mark>ፚ Ꭷ Ꮢ Ꭷ ❥ | #Free_Palestine
 <table border="0" width="100%" style="border-collapse: collapse">
 <tr><td class="alt1" colspan="3"><b>
 <font size="5" color="lime">
-<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللهم إنا نسألك أن تكتب لما الرحمة الواسعة، وألا تدع ذنب لنا إلا وغفرته، ولا هم إلا فرجته.
+<marquee direction="right" width="100%" height="40"direction="right" onmouseover="this.stop()" onmouseout="this.start()" scrolldelay="0" scrollamount="5">. اللهم إنا نسألك أن تكتب لنا الرحمة الواسعة، وألا تدع ذنب لنا إلا وغفرته، ولا هم إلا فرجته.
 نسأل الله العظيم صاحب الجلال والإكرام أن يقضي عنا حوائج الدين والدنيا، وأن نكون من المقبولين وليس من المطرودين
  </marquee></font></b></td>
 </tr></table></div>
